assets/css/style.css
/* ... */
.solar--phone-bold {
  display: inline-block;
  color: var(--brand-color-secondary);
  margin: -0.2em;
  width: 2em;
  height: 1em;
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='m16.556 12.906l-.455.453s-1.083 1.076-4.038-1.862s-1.872-4.014-1.872-4.014l.286-.286c.707-.702.774-1.83.157-2.654L9.374 2.86C8.61 1.84 7.135 1.705 6.26 2.575l-1.57 1.56c-.433.432-.723.99-.688 1.61c.09 1.587.808 5 4.812 8.982c4.247 4.222 8.232 4.39 9.861 4.238c.516-.048.964-.31 1.325-.67l1.42-1.412c.96-.953.69-2.588-.538-3.255l-1.91-1.039c-.806-.437-1.787-.309-2.417.317'/%3E%3C/svg%3E");
  background-color: currentColor;
  -webkit-mask-image: var(--svg);
  mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
}

.ic--baseline-mail {
  display: inline-block;
  color: var(--brand-color-secondary);
  margin: -0.2em;
  width: 2em;
  height: 1em;
  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2m0 4l-8 5l-8-5V6l8 5l8-5z'/%3E%3C/svg%3E");
  background-color: currentColor;
  -webkit-mask-image: var(--svg);
  mask-image: var(--svg);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
}


/* BODY */
* {
  font-family: var(--font-style);
  margin: 0;
}

.head1 {
  color: var(--brand-color-primary);
  font-weight: bolder;
}

.head2 {
  color: var(--brand-color-secondary);
  font-weight: bolder;
  margin: 1em;
}

.head5 {
  color: var(--brand-color-secondary);
  font-weight: bold;
  margin-left: 1em;
}

.head6 {
  color: var(--brand-color-secondary);
}

.p-home {
  color: var(--brand-color-secondary);
  margin-top: -0.5em;
}

.anchors {
  text-decoration: none;
  color: var(--font-light);
}

/* NAVBAR */
.logo-img {
  width: 10em;
}

#btn-bg-clr {
  background-color: var(--brand-color-primary);
  border: none;
  color: #fff;
}

/* HOME */
#home {
  background: radial-gradient(rgba(var(--bg-rgb-1), 0.200), rgba(var(--bg-rgb-2), 0.900));
  background-position: center;
  background-repeat: no-repeat;
}

.bg-video {
  position: absolute;
  z-index: -99;
  object-fit: cover;
  width: 100vw;
  height: 100vh;
}

/* PROJECTS */
.image-wrap {
  border-radius: 15px;
  background: linear-gradient(rgba(var(--bg-rgb-1), 0.100), rgba(var(--bg-rgb-1), 0.100), rgba(var(--bg-rgb-dark), 0.500));
}


.prj-img {
  border-radius: 15px;
  position: relative;
  z-index: -99;
}

.prj-head {
  font-weight: bold;
  text-shadow: 1px 1px 18px #545454;
  color: var(--font-light);
}

.prj-link {
  text-shadow: 1px 1px 18px #545454;
}

.text-pos {
  margin-top: -4em;
  margin-left: 1em;
}

/* SERVICES */

ul,
li {
  list-style: none;
  margin-left: -0.3em;
}


/* LETS TALK */
#letstalk {
  background: radial-gradient(rgba(var(--bg-rgb-1), 0.200), rgba(var(--bg-rgb-2), 0.900));
}

.btn-form {
  background-color: #fff;
}

.form-inp {
  background-color: var(--font-light);
  border: none;
  width: 60%;
  height: 3em;
  padding: 1em;
  border-radius: 8px;
}

#message {
  height: auto;
}

/* FOOTER */
.social-icons {
  margin-left: 1.2em;
}

.footer-service {
  margin-left: -0.4em;
}

.contact-links {
  text-decoration: none;
  color: var(--brand-color-secondary);
}

/*
 @media (max-width: 991px) {
      #nav1, #navbarNav {
        margin: auto; 
        margin-bottom: 10px;
        padding: 10px;
        position: relative;
        border-radius: 10px;
        background-color: white;
      }
      nav{
        background-color: transparent !important;
      }
    }
    body{
        background-color: blue;
    }
    nav{
        background-color: white;
        border-radius: 10px;
        margin-top: 10px;   
    }
    #Logo{
      margin-left: 20%;
    }
    .nav-link{
      display: flex;
      justify-content: flex-start;    
    }
    .nav-link:active{
      color:var(--brand-color-primary) !important;
    }

    */

